Edits to theme files and updates from latest version of lyquix template

--- a/css/less/06-common-colors.less
+++ b/css/less/06-common-colors.less
@@ -4,49 +4,199 @@
 // Colors
 // --------------------------------------------------------------------
 
-.color-bg 		{ color: @color-bg; }
-.color-copy 		{ color: @color-copy; }
-.color-primary 	{ color: @color-primary; }
-.color-secondary 	{ color: @color-secondary; }
-.color-accent-1	{ color: @color-accent-1; }
-.color-accent-2	{ color: @color-accent-2; }
-.color-accent-3	{ color: @color-accent-3; }
-.color-accent-4	{ color: @color-accent-4; }
-.color-accent-5	{ color: @color-accent-5; }
+.color-gray-darker { color: @gray-darker; }
+.color-gray-dark { color: @gray-dark; }
+.color-gray { color: @gray; }
+.color-gray-light { color: @gray-light; }
+.color-gray-lighter { color: @gray-lighter; }
 
-.color-lighter		{} // done with javascript
-.color-light		{}
-.color-dark		{}
-.color-darker		{}
+.color-bg-darker { color: @color-bg-darker; }
+.color-bg-dark { color: @color-bg-dark; }
+.color-bg { color: @color-bg; }
+.color-bg-light { color: @color-bg-light; }
+.color-bg-lighter { color: @color-bg-lighter; }
 
-.bg-bg 			{ background-color: @color-bg; }
-.bg-copy 			{ background-color: @color-copy; }
-.bg-primary 		{ background-color: @color-primary; }
-.bg-secondary 		{ background-color: @color-secondary; }
-.bg-accent-1 		{ background-color: @color-accent-1; }
-.bg-accent-2 		{ background-color: @color-accent-2; }
-.bg-accent-3 		{ background-color: @color-accent-3; }
-.bg-accent-4 		{ background-color: @color-accent-4; }
-.bg-accent-5 		{ background-color: @color-accent-5; }
+.color-copy-darker { color: @color-copy-darker; }
+.color-copy-dark { color: @color-copy-dark; }
+.color-copy { color: @color-copy; }
+.color-copy-light { color: @color-copy-light; }
+.color-copy-lighter { color: @color-copy-lighter; }
 
-.bg-lighter		{} // done with javascript
-.bg-light			{}
-.bg-dark			{}
-.bg-darker		{}
+.color-primary-darker { color: @color-primary-darker; }
+.color-primary-dark { color: @color-primary-dark; }
+.color-primary { color: @color-primary; }
+.color-primary-light { color: @color-primary-light; }
+.color-primary-lighter { color: @color-primary-lighter; }
 
-.border-bg 		{ border-color: @color-bg; }
-.border-copy 		{ border-color: @color-copy; }
-.border-primary 	{ border-color: @color-primary; }
-.border-secondary 	{ border-color: @color-secondary; }
-.border-accent-1 	{ border-color: @color-accent-1; }
-.border-accent-2 	{ border-color: @color-accent-2; }
-.border-accent-3 	{ border-color: @color-accent-3; }
-.border-accent-4 	{ border-color: @color-accent-4; }
-.border-accent-5 	{ border-color: @color-accent-5; }
+.color-secondary-darker { color: @color-secondary-darker; }
+.color-secondary-dark { color: @color-secondary-dark; }
+.color-secondary { color: @color-secondary; }
+.color-secondary-light { color: @color-secondary-light; }
+.color-secondary-lighter { color: @color-secondary-lighter; }
 
-.border-lighter	{} // done with javascript
-.border-light		{}
-.border-dark		{}
-.border-darker		{}
+.color-accent-1-darker { color: @color-accent-1-darker; }
+.color-accent-1-dark { color: @color-accent-1-dark; }
+.color-accent-1 { color: @color-accent-1; }
+.color-accent-1-light { color: @color-accent-1-light; }
+.color-accent-1-lighter { color: @color-accent-1-lighter; }
+
+.color-accent-2-darker { color: @color-accent-2-darker; }
+.color-accent-2-dark { color: @color-accent-2-dark; }
+.color-accent-2 { color: @color-accent-2; }
+.color-accent-2-light { color: @color-accent-2-light; }
+.color-accent-2-lighter { color: @color-accent-2-lighter; }
+
+.color-accent-3-darker { color: @color-accent-3-darker; }
+.color-accent-3-dark { color: @color-accent-3-dark; }
+.color-accent-3 { color: @color-accent-3; }
+.color-accent-3-light { color: @color-accent-3-light; }
+.color-accent-3-lighter { color: @color-accent-3-lighter; }
+
+.color-accent-4-darker { color: @color-accent-4-darker; }
+.color-accent-4-dark { color: @color-accent-4-dark; }
+.color-accent-4 { color: @color-accent-4; }
+.color-accent-4-light { color: @color-accent-4-light; }
+.color-accent-4-lighter { color: @color-accent-4-lighter; }
+
+.color-accent-5-darker { color: @color-accent-5-darker; }
+.color-accent-5-dark { color: @color-accent-5-dark; }
+.color-accent-5 { color: @color-accent-5; }
+.color-accent-5-light { color: @color-accent-5-light; }
+.color-accent-5-lighter { color: @color-accent-5-lighter; }
+
+.color-lighter {} // done with javascript
+.color-light {}
+.color-dark {}
+.color-darker {}
+
+.bg-gray-darker { background-color: @gray-darker; }
+.bg-gray-dark { background-color: @gray-dark; }
+.bg-gray { background-color: @gray; }
+.bg-gray-light { background-color: @gray-light; }
+.bg-gray-lighter { background-color: @gray-lighter; }
+
+.bg-bg-darker { background-color: @color-bg-darker; }
+.bg-bg-dark { background-color: @color-bg-dark; }
+.bg-bg { background-color: @color-bg; }
+.bg-bg-light { background-color: @color-bg-light; }
+.bg-bg-lighter { background-color: @color-bg-lighter; }
+
+.bg-copy-darker { background-color: @color-copy-darker; }
+.bg-copy-dark { background-color: @color-copy-dark; }
+.bg-copy { background-color: @color-copy; }
+.bg-copy-light { background-color: @color-copy-light; }
+.bg-copy-lighter { background-color: @color-copy-lighter; }
+
+.bg-primary-darker { background-color: @color-primary-darker; }
+.bg-primary-dark { background-color: @color-primary-dark; }
+.bg-primary { background-color: @color-primary; }
+.bg-primary-light { background-color: @color-primary-light; }
+.bg-primary-lighter { background-color: @color-primary-lighter; }
+
+.bg-secondary-darker { background-color: @color-secondary-darker; }
+.bg-secondary-dark { background-color: @color-secondary-dark; }
+.bg-secondary { background-color: @color-secondary; }
+.bg-secondary-light { background-color: @color-secondary-light; }
+.bg-secondary-lighter { background-color: @color-secondary-lighter; }
+
+.bg-accent-1-darker { background-color: @color-accent-1-darker; }
+.bg-accent-1-dark { background-color: @color-accent-1-dark; }
+.bg-accent-1 { background-color: @color-accent-1; }
+.bg-accent-1-light { background-color: @color-accent-1-light; }
+.bg-accent-1-lighter { background-color: @color-accent-1-lighter; }
+
+.bg-accent-2-darker { background-color: @color-accent-2-darker; }
+.bg-accent-2-dark { background-color: @color-accent-2-dark; }
+.bg-accent-2 { background-color: @color-accent-2; }
+.bg-accent-2-light { background-color: @color-accent-2-light; }
+.bg-accent-2-lighter { background-color: @color-accent-2-lighter; }
+
+.bg-accent-3-darker { background-color: @color-accent-3-darker; }
+.bg-accent-3-dark { background-color: @color-accent-3-dark; }
+.bg-accent-3 { background-color: @color-accent-3; }
+.bg-accent-3-light { background-color: @color-accent-3-light; }
+.bg-accent-3-lighter { background-color: @color-accent-3-lighter; }
+
+.bg-accent-4-darker { background-color: @color-accent-4-darker; }
+.bg-accent-4-dark { background-color: @color-accent-4-dark; }
+.bg-accent-4 { background-color: @color-accent-4; }
+.bg-accent-4-light { background-color: @color-accent-4-light; }
+.bg-accent-4-lighter { background-color: @color-accent-4-lighter; }
+
+.bg-accent-5-darker { background-color: @color-accent-5-darker; }
+.bg-accent-5-dark { background-color: @color-accent-5-dark; }
+.bg-accent-5 { background-color: @color-accent-5; }
+.bg-accent-5-light { background-color: @color-accent-5-light; }
+.bg-accent-5-lighter { background-color: @color-accent-5-lighter; }
+
+.bg-lighter {} // done with javascript
+.bg-light {}
+.bg-dark {}
+.bg-darker {}
+
+.border-gray-darker { border-color: @gray-darker; }
+.border-gray-dark { border-color: @gray-dark; }
+.border-gray { border-color: @gray; }
+.border-gray-light { border-color: @gray-light; }
+.border-gray-lighter { border-color: @gray-lighter; }
+
+.border-bg-darker { border-color: @color-bg-darker; }
+.border-bg-dark { border-color: @color-bg-dark; }
+.border-bg { border-color: @color-bg; }
+.border-bg-light { border-color: @color-bg-light; }
+.border-bg-lighter { border-color: @color-bg-lighter; }
+
+.border-copy-darker { border-color: @color-copy-darker; }
+.border-copy-dark { border-color: @color-copy-dark; }
+.border-copy { border-color: @color-copy; }
+.border-copy-light { border-color: @color-copy-light; }
+.border-copy-lighter { border-color: @color-copy-lighter; }
+
+.border-primary-darker { border-color: @color-primary-darker; }
+.border-primary-dark { border-color: @color-primary-dark; }
+.border-primary { border-color: @color-primary; }
+.border-primary-light { border-color: @color-primary-light; }
+.border-primary-lighter { border-color: @color-primary-lighter; }
+
+.border-secondary-darker { border-color: @color-secondary-darker; }
+.border-secondary-dark { border-color: @color-secondary-dark; }
+.border-secondary { border-color: @color-secondary; }
+.border-secondary-light { border-color: @color-secondary-light; }
+.border-secondary-lighter { border-color: @color-secondary-lighter; }
+
+.border-accent-1-darker { border-color: @color-accent-1-darker; }
+.border-accent-1-dark { border-color: @color-accent-1-dark; }
+.border-accent-1 { border-color: @color-accent-1; }
+.border-accent-1-light { border-color: @color-accent-1-light; }
+.border-accent-1-lighter { border-color: @color-accent-1-lighter; }
+
+.border-accent-2-darker { border-color: @color-accent-2-darker; }
+.border-accent-2-dark { border-color: @color-accent-2-dark; }
+.border-accent-2 { border-color: @color-accent-2; }
+.border-accent-2-light { border-color: @color-accent-2-light; }
+.border-accent-2-lighter { border-color: @color-accent-2-lighter; }
+
+.border-accent-3-darker { border-color: @color-accent-3-darker; }
+.border-accent-3-dark { border-color: @color-accent-3-dark; }
+.border-accent-3 { border-color: @color-accent-3; }
+.border-accent-3-light { border-color: @color-accent-3-light; }
+.border-accent-3-lighter { border-color: @color-accent-3-lighter; }
+
+.border-accent-4-darker { border-color: @color-accent-4-darker; }
+.border-accent-4-dark { border-color: @color-accent-4-dark; }
+.border-accent-4 { border-color: @color-accent-4; }
+.border-accent-4-light { border-color: @color-accent-4-light; }
+.border-accent-4-lighter { border-color: @color-accent-4-lighter; }
+
+.border-accent-5-darker { border-color: @color-accent-5-darker; }
+.border-accent-5-dark { border-color: @color-accent-5-dark; }
+.border-accent-5 { border-color: @color-accent-5; }
+.border-accent-5-light { border-color: @color-accent-5-light; }
+.border-accent-5-lighter { border-color: @color-accent-5-lighter; }
+
+.border-lighter {} // done with javascript
+.border-light {}
+.border-dark {}
+.border-darker {}
 
 
