Add antialiasing of fonts in webkit browsers

--- a/css/less/01-normalize.less
+++ b/css/less/01-normalize.less
@@ -10,6 +10,8 @@ html {
 	font-feature-settings: "liga";
 	// smooth (momentum) scrolling
     -webkit-overflow-scrolling: touch;
+    // font antialiasing on webskit browsers
+    -webkit-font-smoothing: antialiased;
 }
 
 // Remove default margin.
