Renamed date class in less as to not conflict with core wordpress php of archive pages

--- a/css/less/06-common-author-date-readmore.less
+++ b/css/less/06-common-author-date-readmore.less
@@ -5,7 +5,7 @@
 // --------------------------------------------------------------------
 
 // Date
-.date {
+.article-date {
 	color: @color-copy-light;
 	.small();
 	text-transform: uppercase;
