Changed declaration of .date class to apply to children of body and not body if the current page is the archive.

--- a/css/less/06-common-author-date-readmore.less
+++ b/css/less/06-common-author-date-readmore.less
@@ -5,7 +5,7 @@
 // --------------------------------------------------------------------
 
 // Date
-.article-date {
+body .date {
 	color: @color-copy-light;
 	.small();
 	text-transform: uppercase;
