--- a/css/less/11-responsive-container6.less
+++ b/css/less/11-responsive-container6.less
@@ -1,6 +1,13 @@
-// Responsive layout styles for 6 blocks in small screens
-// --------------------------------------------------------------------
-// Provides the classes for creating a responsive grid-based layout
+/**
+ * 11-responsive-container.less - Responsive layout styles for 6 blocks in small screens
+ *
+ * @version     1.0.2
+ * @package     tpl_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/tpl_lyquix
+ */
 
 // Container
 // --------------------------------------------------------------------
@@ -16,7 +23,7 @@
 
 body[screen=xs] {
   .container {
-    width: (@blk6-width + @blk-padding-border-margin-width * 2);  // xs screen - 6 blocks
+    width: @blk6-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;  // xs screen - 6 blocks
   }
   
   &.blkfluid-xs .container {
@@ -26,7 +33,7 @@ body[screen=xs] {
 
 body[screen=sm] {
   .container {
-    width: (@blk12-width + @blk-padding-border-margin-width * 2); // sm screen - 12 blocks
+    width: @blk12-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // sm screen - 12 blocks
   }
   
   &.blkfluid-sm .container {
@@ -36,7 +43,7 @@ body[screen=sm] {
   
 body[screen=md] {
   .container {
-    width: (@blk18-width + @blk-padding-border-margin-width * 2); // md screen - 18 blocks
+    width: @blk18-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // md screen - 18 blocks
   }
   
   &.blkfluid-md .container {
@@ -46,7 +53,7 @@ body[screen=md] {
 
 body[screen=lg] {
   .container {
-    width: (@blk24-width + @blk-padding-border-margin-width * 2); // lg screen - 24 blocks
+    width: @blk24-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // lg screen - 24 blocks
   }
   
   &.blkfluid-lg .container {
@@ -56,7 +63,7 @@ body[screen=lg] {
   
 body[screen=xl] { 
   .container {
-    width: (@blk30-width + @blk-padding-border-margin-width * 2); // xl screen - 30 blocks
+    width: @blk30-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // xl screen - 30 blocks
   }
   
   &.blkfluid-xl .container {
