--- a/css/less/10-lyquix.less
+++ b/css/less/10-lyquix.less
@@ -1,2 +1,14 @@
+/**
+ * 10.lyquix.less - Styles for Lyquix modules, plugins
+ *
+ * @version     1.0.2
+ * @package     tpl_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/tpl_lyquix
+ */
+
 @import (less) "10-lyquix-lyqbox.less";						// lyqbox styles
 @import (less,optional) "custom/10-lyquix-lyqbox.less";		// override
+
