--- a/css/less/05-base-elements.less
+++ b/css/less/05-base-elements.less
@@ -1,6 +1,13 @@
-// Base styles
-// --------------------------------------------------------------------
-// Sets the basic colors, typography and styles for base tags 
+/**
+ * 05-base-elements.less - Sets colors, typography and styles for base tags
+ *
+ * @version     1.0.2
+ * @package     tpl_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/tpl_lyquix
+ */
 
 html {
     // browser default is 16px, this value equals to 10px for easy use of rem in the rest of document
@@ -73,6 +80,10 @@ h6 {
 	font-size: @font-size-h6;
 	line-height: @line-height-heading;
 	margin: @elem-margin-heading 0;
+}
+h1, h2, h3 {
+	// add discretionary ligatures font feature
+	font-feature-settings: "kern" 1, "liga" 1, "dlig" 1, "calt" 1, "onum" 1, "pnum" 1, "tnum" 0,  "lnum" 0;
 }
 input,textarea,select {
 	background-color: @color-input-bg;
