--- a/css/less/06-common-image-gallery-video.less
+++ b/css/less/06-common-image-gallery-video.less
@@ -1,5 +1,13 @@
-// Common classes
-// --------------------------------------------------------------------
+/**
+ * 06-common-image-gallery-video.less - Common CSS classes for images, galleries and video players
+ *
+ * @version     1.0.2
+ * @package     tpl_lyquix
+ * @author      Lyquix
+ * @copyright   Copyright (C) 2015 - 2017 Lyquix
+ * @license     GNU General Public License version 2 or later
+ * @link        https://github.com/Lyquix/tpl_lyquix
+ */
 
 // Images
 // --------------------------------------------------------------------
@@ -27,10 +35,10 @@
 .gallery {
 	img {
 		width: @blk-content-width * 2;
-		padding: @blk-padding-width;
+		padding: @blk-padding-top @blk-padding-right @blk-padding-bottom @blk-padding-left;
 		border: @blk-border-width solid @gray-light;
-		margin-right: @blk-margin-width;
-		margin-bottom: @blk-margin-width;
+		margin-right: @blk-margin-right;
+		margin-bottom: @blk-margin-left;
 	}
 }
 
