--- a/css/less/11-responsive-container5.less
+++ b/css/less/11-responsive-container5.less
@@ -1,13 +1,6 @@
-/**
- * 11-responsive-container.less - Responsive layout styles for 5 blocks in small screens
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Responsive layout styles for 5 blocks in small screens
+// --------------------------------------------------------------------
+// Provides the classes for creating a responsive grid-based layout
 
 // Container
 // --------------------------------------------------------------------
@@ -18,32 +11,32 @@
 // and change the one for 12 blocks to include lg and xl screens.
 
 .container {
-  margin:0 auto;
+	margin:0 auto;
 }
 
 body[screen=xs] {
-  .container {
-    width: @blk5-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right;  // xs screen - 5 blocks
-  }
-  
-  &.blkfluid-xs .container {
-    width: 100%;
-  }
+	.container {
+		width: (@blk5-width + @blk-padding-border-margin-width * 2);	// xs screen - 5 blocks
+	}
+	
+	&.blkfluid-xs .container {
+		width: 100%;
+	}
 }
 
 body[screen=sm] {
-  .container {
-    width: @blk10-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // sm screen - 10 blocks
-  }
-  
-  &.blkfluid-sm .container {
-    width: 100%;
-  }
+	.container {
+		width: (@blk10-width + @blk-padding-border-margin-width * 2);	// sm screen - 10 blocks
+	}
+	
+	&.blkfluid-sm .container {
+		width: 100%;
+	}
 }
   
 body[screen=md] {
   .container {
-    width: @blk15-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // md screen - 15 blocks
+    width: (@blk15-width + @blk-padding-border-margin-width * 2); // md screen - 15 blocks
   }
   
   &.blkfluid-md .container {
@@ -53,7 +46,7 @@ body[screen=md] {
 
 body[screen=lg] {
   .container {
-    width: @blk20-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // lg screen - 20 blocks
+    width: (@blk20-width + @blk-padding-border-margin-width * 2); // lg screen - 20 blocks
   }
   
   &.blkfluid-lg .container {
@@ -63,7 +56,7 @@ body[screen=lg] {
   
 body[screen=xl] { 
   .container {
-    width: @blk25-width + @blk-padding-border-margin-left + @blk-padding-border-margin-right; // xl screen - 25 blocks
+    width: (@blk25-width + @blk-padding-border-margin-width * 2); // xl screen - 25 blocks
   }
   
   &.blkfluid-xl .container {
