--- a/css/less/06-common-menu.less
+++ b/css/less/06-common-menu.less
@@ -1,6 +1,10 @@
-/**
- * 06-common-menu.less - 
- *
+// Common classes
+// --------------------------------------------------------------------
+
+// Menus
+// --------------------------------------------------------------------
+
+/*
  * Add the following classes to a parent of your ul.menu(s):
  * 
  * Select one of the following: 
@@ -19,12 +23,6 @@
  * 
  * Menu control: add an element with class .menu-control as a child of .slide-out to implement the hamburguer and close icons and functionality
  * 
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
  */
 
 // common rules for all types of menus
