--- a/css/less/07-effects-box-text.less
+++ b/css/less/07-effects-box-text.less
@@ -1,13 +1,5 @@
-/**
- * 07-effects-box-text.less - CSS3 effects and animations for text and box elements
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// CSS3 effects, transforms and animationsommon classes
+// --------------------------------------------------------------------
 
 // basic effects and transformations
 // --------------------------------------------------------------------
@@ -62,22 +54,6 @@
 
 .round-corners {
 	border-radius: @border-radius;
-}
-
-.round-corners-top-right {
-	border-top-right-radius: @border-radius;
-}
-
-.round-corners-bottom-right {
-	border-bottom-right-radius: @border-radius;
-}
-
-.round-corners-bottom-left {
-	border-bottom-left-radius: @border-radius;
-}
-
-.round-corners-top-left {
-	border-top-left-radius: @border-radius;
 }
 
 .round-corners-top {
