--- a/css/less/07-effects-image.less
+++ b/css/less/07-effects-image.less
@@ -1,13 +1,5 @@
-/**
- * 07-effects-image.less - CSS3 effects and animations for images
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// CSS3 effects, transforms and animationsommon classes
+// --------------------------------------------------------------------
 
 // image transforms
 // --------------------------------------------------------------------
