--- a/css/less/99-print-common.less
+++ b/css/less/99-print-common.less
@@ -1,13 +1,7 @@
-/**
- * 99-print-common.less - Common CSS classes to apply for print version
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Print common
+// --------------------------------------------------------------------
+// common print-related classes, only apply when printing
+
 
 // page break classes
 .page-break-before-always { page-break-before: always; }
