--- a/css/less/06-common-author-date-readmore.less
+++ b/css/less/06-common-author-date-readmore.less
@@ -1,16 +1,11 @@
-/**
- * 06-common-author-date-readmore.less - Styles for author, dates, and read more
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Common classes
+// --------------------------------------------------------------------
+
+// Dates, author, read more
+// --------------------------------------------------------------------
 
 // Date
-.date {
+body .date {
 	color: @color-copy-light;
 	.small();
 	text-transform: uppercase;
