--- a/css/less/06-common-colors.less
+++ b/css/less/06-common-colors.less
@@ -1,13 +1,8 @@
-/**
- * 06-common-colors.less - Common classes for assigning site brand colors to elements
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Common classes
+// --------------------------------------------------------------------
+
+// Colors
+// --------------------------------------------------------------------
 
 .color-gray-darker { color: @gray-darker; }
 .color-gray-dark { color: @gray-dark; }
