--- a/css/less/06-common-column-grid.less
+++ b/css/less/06-common-column-grid.less
@@ -1,33 +1,29 @@
-/**
- * 06-common-column-grid.less - Common CSS classes for columns: breaks blocks of texts into even-height columns, with a gap equal to the preset padding+border+margin
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Common classes
+// --------------------------------------------------------------------
+
+// Columns
+// --------------------------------------------------------------------
+// breaks blocks of texts into even-height columns, with a gap equal to the preset padding+border+margin
 
 .columns2 {
     column-count: 2;
-    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
+    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
 }
 .columns3 {
     column-count: 3;
-    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
+    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
 }
 .columns4 {
     column-count: 4;
-    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
+    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
 }
 .columns5 {
     column-count: 5;
-    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
+    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
 }
 .columns6 {
     column-count: 6;
-    column-gap: @blk-padding-border-margin-left + @blk-padding-border-margin-right;
+    column-gap: (@blk-padding-width + @blk-border-width + @blk-margin-width) * 2;
 }
 
 
