--- a/css/less/99-print.less
+++ b/css/less/99-print.less
@@ -1,13 +1,6 @@
-/**
- * 99-print.less - Styles for print version
- *
- * @version     1.0.2
- * @package     tpl_lyquix
- * @author      Lyquix
- * @copyright   Copyright (C) 2015 - 2017 Lyquix
- * @license     GNU General Public License version 2 or later
- * @link        https://github.com/Lyquix/tpl_lyquix
- */
+// Print styles
+// --------------------------------------------------------------------
+// Loads styles for print version of pages
 
 @import (less) "99-print-normalize.less";                   // normalize print styles
 @import (less) "99-print-common.less";                      // common print-related css classes
